--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ var x = setInterval(function() {
    <div class="col-sm">
  
  <div class="card" style="width: 18rem;">
-  <img class="card-img-top heimg" src="t1.jpeg" alt="Card image cap">
+  <img class="card-img-top heimg" src="/t1.jpeg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"><b>Grammer Pursuit Quiz </b></h5>
 
