--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@ var x = setInterval(function() {
   </div>
 </div>
 </div>
+    <br>
 
    <div class="col-sm">
  
@@ -361,13 +362,13 @@ var x = setInterval(function() {
 </div>
 
 
-
+<br>
 
     
    <div class="col-sm">
  
  <div class="card" style="width: 18rem;">
-  <img class="card-img-top heimg" src="/t1.jpeg" alt="Card image cap">
+  <img class="card-img-top heimg" src="t1.jpeg" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title"><b>Grammer Pursuit Quiz </b></h5>
 
@@ -375,6 +376,7 @@ var x = setInterval(function() {
   </div>
 </div>
 </div>
+    <br>
 
 <div class="col-sm">
  
@@ -387,6 +389,7 @@ var x = setInterval(function() {
   </div>
 </div>
 </div>
+    <br>
 <div class="col-sm">
  
  <div class="card" style="width: 18rem;">
@@ -398,6 +401,7 @@ var x = setInterval(function() {
   </div>
 </div>
 </div>
+    <br>
 <div class="col-sm">
  
  <div class="card" style="width: 18rem;">
