--- a/index.html
+++ b/index.html
@@ -209,12 +209,14 @@ var x = setInterval(function() {
 <div class="container">
    <div class="row">
                         <div class="col-sm">
-<a  class="btn btn-danger" href="" > Watch Live</a> 
+<a  class="btn btn-danger" href="watch.html" > Watch Live</a> 
 </div>
+     <br>
                         <div class="col-sm">
 
 <a  class="btn btn-danger" href="" > Project Expo Live</a> 
 </div>
+     <br>
                         <div class="col-sm">
 <a  class="btn btn-danger" href="https://t.me/technoholics2k21" > Join Telegram Group</a> 
 </div>
