--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ml-auto">
         <a class="nav-link active" href="#home"><span style="color: #132e6e"> HOME</span></a>
-    <a class="nav-link active" href="#Ag"><span style="color: black"><span style="color: #132e6e"> AGENDA</span></span></a>
-    <a class="nav-link active" href="#En"><span style="color: black"><span style="color: #132e6e"> EVENTS</span></span></a>
-     <a class="nav-link active" href="#TW"><span style="color: black">TECHNOHOLICS WINNERS </span></a>
-   <button type="button" href="#" class="btn btn-primary btn-sm">REGISTER</button>
+    <a class="nav-link active" href="#Ag"><span style="color: black"><span style="color: #132e6e">AGENDA</span></span></a>
+    <a class="nav-link active" href="#En"><span style="color: black"><span style="color: #132e6e">EVENTS</span></span></a>
+     <a class="nav-link active" href="#TW"><span style="color: black">TECHNOHOLICS WINNERS</span></a>
+   <button type="button" href="http://bit.ly/Technoholics2k21" class="btn btn-primary btn-sm">REGISTER</button>
     </div>
   </div>
 </nav>
@@ -193,7 +193,7 @@ var x = setInterval(function() {
   <br>
 
   <footer class="blockquote-footer"><cite title="Source Title"><span style="color: black"><b></span></cite></b></cite></footer>
-    <h2 class="mb-0"><span style="color: black"><b><span style="color: #b3568c">TECHNOHOLICS</span><span style="color: #132e6e"> 2021</span></b></span></h2>
+    <h2 class="mb-0"><span style="color: black"><b><span style="color: #b3568c">TECHNOHOLICS</span><span style="color: #132e6e"> 2K21</span></b></span></h2>
     <br>
     <footer class="blockquote-footer"><cite title="Source Title"><span style="color: black"><b># An Exceptional Experience Over The Time</span></cite></b></cite></footer>
     <br>
