--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body >
 
            <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
-  <a class="navbar-brand" href="index.html"><span style="color: #b3568c">TECHNOHOLICS</span><span style="color: #132e6e"> 2021</span></a>
+  <a class="navbar-brand" href="index.html"><span style="color: #b3568c">TECHNOHOLICS</span><span style="color: #132e6e"> 2K21</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
