--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   </style>
 </head>
-<body >
+<body style="background-color: #F0FFFF">
 
            <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
   <a class="navbar-brand" href="index.html"><span style="color: #b3568c">TECHNOHOLICS</span><span style="color: #132e6e"> 2K21</span></a>
