--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ var x = setInterval(function() {
   </div>
 </div>
 <br>
-<marque>Registrations Are CLOSED!!!</marque>
+<marquee><span>Registrations Are CLOSED!!!</span></marquee><br><br>
 <div class="container">
    <div class="row">
                         <div class="col-sm">
