--- a/index.html
+++ b/index.html
@@ -224,17 +224,17 @@ var x = setInterval(function() {
 
 </div>
 
-</div>
+</div><br><br>
 <div id="Ag">
         <div class="container">
                 <div class="timeline">
                   <div class="section-title">
                     
                   </div>
-          <center><h2 style="color: solid black">Agenda</h2></center><br>
+          
                    <div class="row">
                         <div class="col-sm-6">
-
+<center><h2 style="color: solid black">Agenda</h2></center><br>
                             <ul>
                                   <strong>  <h4>Schedule for 17<sup> th</sup> May 2021</h4></strong>
                                   <br>
