--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ var x = setInterval(function() {
 
 </div>
 
-</div><br><br>
+</div><br><br><br>
 <div id="Ag">
         <div class="container">
                 <div class="timeline">
@@ -233,7 +233,7 @@ var x = setInterval(function() {
                   </div>
           
                    <div class="row">
-                     <center><h2 style="color: solid black">Agenda</h2></center><br>
+                     <center><h2 style="color: solid black">Agenda</h2></center>
                         <div class="col-sm-6">
                             <ul>
                                   <strong>  <h4>Schedule for 17<sup> th</sup> May 2021</h4></strong>
