--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ var x = setInterval(function() {
 
 </div>
 
-</div><br><br><br>
+</div><br><hr><br><br>
 <div id="Ag">
         <div class="container">
                 <div class="timeline">
