--- a/index.html
+++ b/index.html
@@ -265,15 +265,12 @@ var x = setInterval(function() {
 
 <div class="container">
    <div class="row">
-                        <div class="col-sm-3">
+                        <div class="col-sm">
 <a  class="btn btn-danger" href="" > Watch Live</a> 
 </div>
-                        <div class="col-sm-3">
+                      
 
-<a  class="btn btn-danger" href="" > Project Expo Live</a> 
-</div>
-
-                        <div class="col-sm-3">
+                        <div class="col-sm">
 <a  class="btn btn-danger" href="https://t.me/technoholics2k21" > Join Telegram Group</a> 
 </div>
 
